# classic_messaging_kombu

./: README.md  setup.cfg
sources/classic/messaging/kombu/: __init__.py  consumer.py  handlers.py  publisher.py  scheme.py
sources/classic/messaging_kombu/: __init__.py  consumer.py  handlers.py  publisher.py  scheme.py
